# floppy

./: Cargo.toml  asan.sh  make.toml  rust-toolchain.toml  rustfmt.toml  tsan.sh
.github/workflows/: ci.yml
clients/: Cargo.toml
clients/examples/: extended.rs  simple.rs
src/: catalog.rs  common.rs  dc.rs  dc2.rs  env.rs  lib.rs  main.rs  server.rs  session.rs  session_ctx.rs  sql.rs  storage.rs  tc.rs  test_util.rs
src/catalog/: Cargo.toml  memory.rs  mod.rs  names.rs
src/catalog/src/: lib.rs  memory.rs  names.rs
src/common/: Cargo.toml  datatype.rs  error.rs  field.rs  ivec.rs  lib.rs  mod.rs  operator.rs  relation.rs  row.rs  scalar.rs  schema.rs  tuple.rs  value.rs
src/common/src/: adt.rs  error.rs  lib.rs  relation.rs  row.rs  scalar.rs  schema.rs  value.rs
src/common/src/adt/: char.rs  varchar.rs
src/dc/: buf_frame.rs  buf_mgr.rs  buffer_pool.rs  codec.rs  eviction_strategy.rs  node.rs  page.rs  page_wal.rs  slot_array.rs  swal.rs  tree.rs  tree_node.rs
src/dc2/: buf.rs  bufmgr.rs  codec.rs  eviction.rs  lp.rs  meta.rs  node.rs  opaque.rs  page.rs  tree.rs
src/env/: sim.rs  stdenv.rs
src/fp/: Cargo.toml
src/fp/src/: main.rs  session_ctx.rs
src/kv/: Cargo.toml
src/log_mgr/: Cargo.toml
src/logical_expr/: Cargo.toml  column.rs  expr.rs  expr_rewriter.rs  expr_visitor.rs  literal.rs  mod.rs
src/logical_expr/src/: column.rs  expr.rs  expr_visitor.rs  lib.rs  literal.rs
src/logical_plan/: Cargo.toml  builder.rs  display.rs  mod.rs  operator.rs  plan.rs  planner.rs
src/logical_plan/src/: builder.rs  display.rs  expr_rewriter.rs  lib.rs  plan.rs  planner.rs
src/pgrepr/: Cargo.toml  format.rs  mod.rs
src/pgrepr/src/: format.rs  lib.rs  types.rs
src/pgrepr/src/value/: numeric.rs
src/pgwire/: Cargo.toml  codec.rs  message.rs  mod.rs  protocol.rs  server.rs
src/pgwire/src/: codec.rs  lib.rs  message.rs  protocol.rs  server.rs
src/physical_expr/: Cargo.toml  binary_expr.rs  column.rs  expr.rs  mod.rs  try_cast.rs
src/physical_expr/src/: binary_expr.rs  column.rs  expr.rs  lib.rs  try_cast.rs
src/physical_plan/: Cargo.toml  display.rs  empty.rs  filter.rs  heap_scan.rs  mod.rs  plan.rs  planner.rs  projection.rs
src/physical_plan/src/: display.rs  empty.rs  filter.rs  heap_scan.rs  lib.rs  plan.rs  planner.rs  projection.rs
src/plan/: Cargo.toml
src/plan/src/: analyze.rs  context.rs  expr.rs  func.rs  lib.rs  logical_plan.rs  physical_plan.rs  planner.rs  query.rs  visitor.rs
src/plan/src/logical_plan/: log_planner.rs  planner.rs
src/plan/src/physical_plan/: empty.rs  filter.rs  index_scan.rs  phys_planner.rs  planner.rs  projection.rs  table_scan.rs
src/plan/src/prim/: expr.rs  func.rs
src/plan/src/primitive/: expr.rs  func.rs
src/session/: Cargo.toml
src/session/src/: lib.rs
src/sql/: Cargo.toml  analyzer.rs  context.rs  logical_plan.rs  physical_plan.rs  planner.rs  visitor.rs
src/sql/physical_plan/: empty.rs  filter.rs  planner.rs  pri_scan.rs  projection.rs  sec_scan.rs
src/sql/primitive/: expr.rs  func.rs
src/sql/src/: analyzer.rs  context.rs  lib.rs  logical_plan.rs  physical_plan.rs  planner.rs  primitive.rs  visitor.rs
src/sql/src/physical_plan/: empty.rs  filter.rs  planner.rs  pri_scan.rs  projection.rs
src/sql/src/primitive/: expr.rs  func.rs
src/storage/: Cargo.toml  memory.rs
src/storage/src/: lib.rs  memory.rs
src/store/: mod.rs
src/tc/: lock_mgr.rs  wal.rs
src/test_util/: Cargo.toml  seeder.rs
src/test_util/src/: lib.rs  seed.rs  seeder.rs
src/txn_mgr/: Cargo.toml
src/txn_mgr/src/: lib.rs
tests/: sql.rs
