[package]
name = "floppy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = { version = "0.3", features = ["serde"]}
sqlparser = {version = "0.18.0", features = ["serde"]}
futures = "0.3"
tokio = { version = "1", features = ["full"] }
postgres-protocol = {version = "0.6.4"}
tracing = "0.1.36"
tracing-subscriber = "0.3.15"