[package]
name = "floppy"
version = "0.0.1"
edition = "2021"

[dependencies]
common = {path = "src/common"}
sql = {path = "src/sql"}
session = {path = "src/session"}

[workspace]
members = [
    "src/common",
    "src/catalog",
    "src/storage",
    "src/kv",
    "src/sql",
    "src/session",
    "src/test_util",
    "clients",
]