[package]
name = "floppy"
version = "0.0.1"
edition = "2021"

[dependencies]
async-trait = "0.1"
sqlparser = {version = "0.18.0", features = ["serde"]}
serde = {version = "1.0", features = ["derive"]}
rust_decimal = "1.26"
futures = "0.3"
lazy_static = "1.4"
tokio = {version = "1.0", features = ["full"]}
dashmap = "5.4"