[package]
name = "fp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
tokio = { version = "1", features = ["full"] }
sqlparser = {version = "0.18.0", features = ["serde"]}
common = { path = "../common" }
storage = { path = "../storage" }
pgwire = { path = "../pgwire" }
