[package]
name = "logical_plan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
logical_expr = {path = "../logical_expr"}
storage = {path = "../storage"}
sqlparser = {version = "0.18.0", features = ["serde"]}

