[package]
name = "pgwire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
pgrepr = {path = "../pgrepr"}
session = {path = "../session" }
bytes = "1.2.1"
byteorder = "1.4.3"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = {version = "0.6.3", features = ["codec"]}
postgres-protocol = {version = "0.6.4"}
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
sqlparser = {version = "0.18.0", features = ["serde"]}
postgres = "0.19.4"
itertools = "0.10.4"