[package]
name = "plan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
storage = {path = "../storage"}
catalog = {path = "../catalog"}
sqlparser = {version = "0.18.0", features = ["serde"]}
rust_decimal = "1.26"