[package]
name = "session"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlparser = {version = "0.18.0", features = ["serde"]}
common = {path = "../common"}
pgrepr = {path = "../pgrepr"}
txn_mgr = {path = "../txn_mgr"}
